add first assignment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
             <h1>JS Assignments </h1>
             <ul>
-                <li><a href="">dots and ball bounce</a></li>
+                <li><a href="https://jitendra-shrestha.github.io/javascript-assignments/assignment 1/">dots and ball bounce</a></li>
             </ul>
         </div>
     </div>
